# vibecodingdk

./: .copconignore  .env.docker  .env.docker.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.yml  env.example
.cursor/rules/: rules.mdc
.specs/2025-08-29-vibe-coding-workshop-landing-page/: design.md  requirements.md  tasks.md
agent/: API_SUMMARY.md  openapi.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/migrations/: env.py
backend/migrations/versions/: 333614ead8ed_add_user_model.py
backend/src/backend/: __init__.py  app.py  db.py  main.py  settings.py  utils.py
backend/src/backend/services/auth/: dependencies.py  models.py  routes.py  utils.py
backend/src/backend/services/contact/: __init__.py  routes.py  schemas.py  service.py
backend/src/backend/services/email/: service.py
backend/src/backend/services/email/templates/: verification_email.html  welcome_email.html
backend/src/backend/services/example_service/: models.py  routes.py  schemas.py  service.py
backend/src/backend/services/users/: dependencies.py  models.py  routes.py  schemas.py  service.py
data/: presse.json
docs/: index.md
docs/agent/: context.md  plan.md  project.md
docs/agent/commands/: analyze_copy.md  clarify.md  execute.md  facelift.md  make_plan.md  plan.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Contact.tsx  Credibility.tsx  Hero.tsx  Layout.tsx  (+1 more)
(+2 files in other folders)
